# Suit

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LinuxMain.swift  Overrides.xcconfig  Package.resolved  Package.swift  README.md  build.sh  build_macOS.sh  generate-xcodeproj.sh  install_dependencies_ubuntu.sh  macOS.xcconfig  out.xml  test.sh
Image Sources/: Suit Logo.pxm  suit_banner.pxm
PromoImages/: SuitLogo.pxm
Sources/: Appearance.swift  Application.swift  Bundle.swift  Button.swift  ButtonGroup.swift  Clipboard.swift  Colour.swift  Component.swift  CompositeComponent.swift  Constants.swift  Cursor.swift  DividerComponent.swift  Dropdown.swift  EdgeInsets.swift  FileBrowser.swift  Font.swift  Graphics.swift  IconService.swift  Image.swift  ImageView.swift  KeyEvent.swift  KeyEventDelegate.swift  Label.swift  ListComponent.swift  ListView.swift  ListViewCell.swift  Menu.swift  NSBezierPath.swift  PointerEvent.swift  PointerEventDelegate.swift  RedrawManager.swift  RepeatingTimer.swift  ScrollView.swift  TextDisplay.swift  TextInput.swift  TitleBar.swift  TitleBarButtonGroup.swift  ToggleView.swift  TreeComponent.swift  TreeView.swift  (+3 more)
Sources/Animation/: Animatable.swift  AnimatableProperties.swift  Animation.swift  AnimationProperties.swift  AnimationTimer.swift  Animator.swift  Easing.swift  ViewAnimation.swift
Sources/File Browser/: FileBrowserComponent.swift  FileListComponent.swift
Sources/Linux/: CairoGraphics.swift  DisplayUtils.swift  Font+Pango.swift  GtkMenuController.swift  GtkStyleMenu.swift  (+8 more)
Tests/: XCTestManifests.swift
Tutorials/: TheBasics.md
(+49 files in other folders)
